name:           BBTest
version:        0.0.1
license:        BSD3
copyright:      (c) 2009  Valery V. Vorotyntsev
author:         Valery V. Vorotyntsev (vvv)
maintainer:     valery.vv@gmail.com
stability:      experimental
synopsis:       Black-box testing of UMC preprocessing system
description:    XXX
category:       Testing
cabal-version:  >= 1.2
build-type:     Simple
tested-with:    GHC == 6.10.4

library
  build-depends:    base >= 4.1.0, mtl >= 1.1.0, bytestring >= 0.9.1
  exposed-modules:  BBTest.BER
