name:           under
version:        0.0.1
license:        BSD3
copyright:      (c) 2009  Valery V. Vorotyntsev
author:         Valery V. Vorotyntsev (vvv)
maintainer:     valery.vv@gmail.com
homepage:       http://github.com/vvv/under
stability:      experimental
synopsis:       DER data manipulation (DER = Distinguished Encoding Rules)
description:    Decode/encode DER data streams. Convert ASN.1 values
                (tags) to S-expressions (sexps) and vice versa.
category:       Codec
cabal-version:  >= 1.2
build-type:     Simple
tested-with:    GHC == 6.10.4

library
  build-depends:    base >= 4.1.0, mtl >= 1.1.0, bytestring >= 0.9.1
  exposed-modules:  Codec.Binary.DER

executable under
  main-is: Main.hs
